--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Boilerplate for ReactJS project with hot code reloading",
   "scripts": {
     "start": "node server.js",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"
   },
   "repository": {
     "type": "git",
@@ -34,12 +35,21 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
+    "classie": "^1.0.0",
     "eslint-plugin-react": "^3.6.2",
+    "get-style-property": "^0.1.1",
+    "history": "^1.13.1",
+    "imports-loader": "^0.6.5",
+    "matches-selector": "^1.0.0",
+    "outlayer": "^1.4.2",
+    "packery": "^1.4.3",
     "react-hot-loader": "^1.3.0",
+    "react-router": "^1.0.2",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "packery": "^1.4.3",
     "react": "^0.14.0",
     "react-dom": "^0.14.0"
   }
