--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/gaearon/react-hot-boilerplate",
   "devDependencies": {
+    "autoprefixer": "^6.2.0",
     "babel-core": "^6.0.20",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^6.0.1",
@@ -36,22 +37,32 @@
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
     "classie": "^1.0.0",
+    "css-loader": "^0.23.0",
     "eslint-plugin-react": "^3.6.2",
+    "file-loader": "^0.8.5",
+    "fs": "0.0.2",
     "get-style-property": "^0.1.1",
     "history": "^1.13.1",
+    "img-loader": "^1.2.2",
     "imports-loader": "^0.6.5",
+    "jquery": "^2.1.4",
     "matches-selector": "^1.0.0",
+    "material-design-lite": "^1.0.6",
+    "navigator": "^1.0.1",
+    "net": "^1.0.2",
+    "node-sass": "^3.4.2",
     "outlayer": "^1.4.2",
     "packery": "^1.4.3",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
     "react-hot-loader": "^1.3.0",
     "react-router": "^1.0.2",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1",
     "wolfy87-eventemitter": "^4.2.0"
   },
-  "dependencies": {
-    "packery": "^1.4.3",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0"
-  }
+  "dependencies": {}
 }
