--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "lint": "eslint src",
     "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"
   },
-
   "author": "Mike Johnson",
   "license": "MIT",
   "devDependencies": {
@@ -24,7 +23,9 @@
     "file-loader": "^0.8.5",
     "fs": "0.0.2",
     "get-style-property": "^0.1.1",
+    "gsap": "^1.18.0",
     "history": "^1.13.1",
+    "imagesloaded": "^3.2.0",
     "img-loader": "^1.2.2",
     "imports-loader": "^0.6.5",
     "jquery": "^2.1.4",
@@ -38,7 +39,9 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-hot-loader": "^1.3.0",
+    "react-iframe": "0.0.4",
     "react-router": "^1.0.2",
+    "react-youtube": "^5.0.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
