--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "react-dom": "^0.14.0",
     "react-hot-loader": "^1.3.0",
     "react-iframe": "0.0.4",
-    "react-router": "^1.0.2",
-    "react-youtube": "^5.0.0",
+    "react-router": "^2.0.0-rc4",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
