--- a/package.json
+++ b/package.json
@@ -40,13 +40,16 @@
     "react-dom": "^0.14.0",
     "react-hot-loader": "^1.3.0",
     "react-iframe": "0.0.4",
-    "react-router": "^2.0.0-rc4",
+    "react-router": "^2.4.1",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
+    "victory": "^0.1.3",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1",
     "wolfy87-eventemitter": "^4.2.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "particles.js": "^2.0.0"
+  }
 }
