--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node server.js",
     "lint": "eslint src",
-    "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"
+    "build": "NODE_ENV=production webpack -p --config webpack.production.config.js",
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "author": "Mike Johnson",
   "license": "MIT",
