--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "lint": "eslint src",
-    "build": "NODE_ENV=production webpack -p --config webpack.production.config.js",
+    "build": "NODE_ENV=production webpack -p --config webpack.production.config.js && cp -R assets/ dist/assets/",
     "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "author": "Mike Johnson",
