--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "navigator": "^1.0.1",
     "net": "^1.0.2",
     "node-sass": "^3.4.2",
+    "nuka-carousel": "^1.2.1",
     "outlayer": "^1.4.2",
     "packery": "^1.4.3",
     "react": "^0.14.0",
