refactor and update

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node server.js",
     "lint": "eslint src",
     "build": "NODE_ENV=production webpack -p --config webpack.production.config.js && cp -R assets/ dist/assets/",
-    "deploy": "git add . -A && git commit -m 'build' && git push origin master && git subtree push --prefix dist origin gh-pages"
+    "deploy": "git push origin master && git subtree push --prefix dist origin gh-pages"
   },
   "author": "Mike Johnson",
   "license": "MIT",
